[gd_scene load_steps=2 format=3 uid="uid://bvfit0sy2tnw4"]

[ext_resource type="Script" path="res://Scripts/server_form.gd" id="1_43oaq"]

[node name="ServerForm" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -85.5
offset_right = 81.0
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_43oaq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Server IP:"

[node name="ServerIP" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "localhost"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Server Port:"

[node name="ServerPort" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "default"

[node name="Connect" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[connection signal="pressed" from="VBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
